--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body class="max-w-[1440px] mx-auto font-manrope border-2 border-red-600 my-12">
-    <header class="w-10/12 mx-auto relative">
+    <header class="w-11/12 lg:w-10/12 mx-auto relative">
         <!-- start nav codes here -->
         <nav class="">
             <div class="navbar m-0 p-0">
@@ -106,8 +106,8 @@
         </div>
         
         <!-- banner-caption -->
-        <div class="bg-[#131318] rounded-2xl p-5 lg:p-8 lg:w-[45%] lg:absolute lg:right-10 lg:bottom-10">
-            <h2 class="text-2xl font-extrabold text-white">Meet all the heroes from the field</h2>
+        <div class="bg-[#131318] rounded-2xl p-4 lg:p-8 lg:w-[45%] lg:absolute lg:right-10 lg:bottom-10">
+            <h2 class="text-lg font-extrabold lg:text-2xl text-white">Meet all the heroes from the field</h2>
             <p class="text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
         <!-- end banner codes here -->
