--- a/index.html
+++ b/index.html
@@ -33,17 +33,12 @@
         }
     </script>
 
-    <!-- vanilla css styles -->
-    <style>
-        .font-manrope {
-            font-family: "Manrope", sans-serif;
-        }
-    </style>
+    <!-- vanilla css link -->
+    <link rel="stylesheet" href="custom.css">
 </head>
 
-<body class="max-w-[1440px] mx-auto font-manrope border-2 border-red-600 my-12">
-  
-  
+<body class="max-w-[1440px] mx-auto font-manrope">
+
     <header class="w-11/12 lg:w-10/12 mx-auto relative">
         <!-- start nav codes here -->
         <nav class="">
@@ -129,23 +124,111 @@
         <!-- end banner codes here -->
     </header>
 
+    <main class="w-11/12 lg:w-10/12 mx-auto">
 
+        <!-- start professional club here -->
+        <section class="mt-9 lg:mt-24">
+            <div>
+                <div class="text-center py-6 border-y-[2.5px] border-dashed mb-5 lg:mb-10 lg:py-8">
+                    <h2 class="text-[22px] font-extrabold lg:text-4xl">Professional Hockeys Club</h2>
+                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Dit amet consectetur. Condimentum dignissim adipiscing
+                        aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+                </div>
 
+                <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:gap-8 lg:grid-cols-4">
 
+                    <!-- card-1 -->
+                    <div class="text-center">
+                        <div class="radial-progress text-theme-color rotate-[140deg]" style="--value:85;"
+                            role="progressbar"> <span
+                                class="-rotate-[140deg] text-black text-xl font-extrabold">85%</span></div>
+                        <h3 class="text-xl font-semibold my-3">Prayer Facility</h3>
+                        <p class="px-10 md:px-6 lg:px-0">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
 
+                    <!-- card-2 -->
+                    <div class="text-center">
+                        <div class="radial-progress text-[#49D293] rotate-[140deg]" style="--value:90;"
+                            role="progressbar"> <span
+                                class="-rotate-[140deg] text-black text-xl font-extrabold">90%</span></div>
+                        <h3 class="text-xl font-semibold my-3">Experienced Coach</h3>
+                        <p class="px-10 md:px-6 lg:px-0">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
 
-    <main class="w-10/12 mx-auto hidden">
-        <!-- start professional codes here -->
-        <section>
-            <div class="radial-progress" style="--value:70;" role="progressbar">70%</div>
-            <div class="radial-progress" style="--value:70;" role="progressbar">70%</div>
-            <div class="radial-progress" style="--value:70;" role="progressbar">70%</div>
-            <div class="radial-progress" style="--value:70;" role="progressbar">70%</div>
+                    <!-- card-3 -->
+                    <div class="text-center">
+                        <div class="radial-progress text-[#FFB546] rotate-[140deg]" style="--value:85;"
+                            role="progressbar"> <span
+                                class="-rotate-[140deg] text-black text-xl font-extrabold">85%</span></div>
+                        <h3 class="text-xl font-semibold my-3">Senior Player</h3>
+                        <p class="px-10 md:px-6 lg:px-0">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+
+                    <!-- card-4 -->
+                    <div class="text-center">
+                        <div class="radial-progress text-[#4C8DF1] rotate-[140deg]" style="--value:90;"
+                            role="progressbar"> <span
+                                class="-rotate-[140deg] text-black text-xl font-extrabold">90%</span></div>
+                        <h3 class="text-xl font-semibold my-3">Training Ground</h3>
+                        <p class="px-10 md:px-6 lg:px-0">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- end professional codes here -->
 
+        <!-- start Program Sections here -->
+        <section class="mt-9 lg:mt-24">
+            <div>
+                <div class="text-center py-6 border-y-[2.5px] border-dashed mb-5 lg:mb-10 lg:py-8">
+                    <h2 class="text-[22px] font-extrabold lg:text-4xl text-[#131318]">Program Sections</h2>
+                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Dit amet consectetur. Condimentum dignissim adipiscing
+                        aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+                </div>
+
+                <div class="grid gap-6 lg:grid-cols-2 lg:grid-rows-2">
+                    
+                    <div class="bg-custom h-[338px] rounded-2xl flex items-center lg:items-start ">
+                        <div class="pt-10 md:pt-16 lg:pt-24 px-8">
+                            <h2 class="text-2xl text-white font-extrabold">Junior Program</h2>
+                            <p class="text-white mt-3 mb-6">Hockey is one of the most popular sports in the world and
+                                betting is prohibited so we should not bet. Hockey is one of the most popular sports in
+                                the world and betting is prohibited so we should not bet.</p>
+                            <a class="btn border-0 text-white bg-theme-color text-xs lg:text-base">Register Now!</a>
+                        </div>
+                    </div>
+
+
+                    <div class="bg-custom-2 h-[338px] rounded-2xl flex items-center lg:items-start ">
+                        <div class="pt-10 md:pt-16 lg:pt-24 px-8">
+                            <h2 class="text-2xl text-white font-extrabold">Junior Program</h2>
+                            <p class="text-white mt-3 mb-6">Hockey is one of the most popular sports in the world and
+                                betting is prohibited so we should not bet. Hockey is one of the most popular sports in
+                                the world and betting is prohibited so we should not bet.</p>
+                            <a class="btn border-0 text-white bg-theme-color text-xs lg:text-base">Register Now!</a>
+                        </div>
+                    </div>
+
+                    <div class="bg-custom-3 h-[338px] rounded-2xl lg:col-span-2 flex items-center lg:items-start">
+                        <div class="pt-10 md:pt-16 lg:pt-24 px-8">
+                            <h2 class="text-2xl text-white font-extrabold">Junior Program</h2>
+                            <p class="text-white mt-3 mb-6 lg:w-1/2">Hockey is one of the most popular sports in the world and
+                                betting is prohibited so we should not bet. Hockey is one of the most popular sports in
+                                the world and betting is prohibited so we should not bet.</p>
+                            <a class="btn border-0 text-white bg-theme-color text-xs lg:text-base">Register Now!</a>
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </section>
+        <!-- end Program Sections here -->
+
+
         <!-- start Clients Question codes here -->
-        <section>
+        <section class="hidden">
             <div class="collapse collapse-plus bg-base-200">
                 <input type="radio" name="my-accordion-3" checked="checked" />
                 <div class="collapse-title text-xl font-medium">
@@ -180,7 +263,7 @@
 
 
 
-    
+
     <!-- start footer here -->
     <footer class="w-10/12 mx-auto footer p-10 bg-base-200 text-base-content hidden">
         <aside>
