added clients question

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body class="max-w-[1440px] mx-auto font-manrope">
 
-    <header class="w-11/12 lg:w-10/12 mx-auto relative">
+    <header class="w-11/12 lg:w-10/12 mx-auto mt-10 relative">
         <!-- start nav codes here -->
         <nav class="">
             <div class="navbar m-0 p-0">
@@ -118,8 +118,8 @@
         <!-- banner-caption -->
         <div class="bg-[#131318] rounded-2xl p-4 lg:p-8 lg:w-[45%] lg:absolute lg:right-10 lg:bottom-10">
             <h2 class="text-lg font-extrabold lg:text-2xl text-white">Meet all the heroes from the field</h2>
-            <p class="text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor.
-                Purus urna in sit nullam proin. </p>
+            <p class="text-white">Hockey is one of the most popular sports in the world and
+                betting is prohibited so we should not bet.and betting is prohibited so we should not bet. </p>
         </div>
         <!-- end banner codes here -->
     </header>
@@ -131,8 +131,9 @@
             <div>
                 <div class="text-center py-6 border-y-[2.5px] border-dashed mb-5 lg:mb-10 lg:py-8">
                     <h2 class="text-[22px] font-extrabold lg:text-4xl">Professional Hockeys Club</h2>
-                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Dit amet consectetur. Condimentum dignissim adipiscing
-                        aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Hockey is one of the most popular sports in the world
+                        and
+                        betting is prohibited so we should not bet.and betting is prohibited so we should not bet.</p>
                 </div>
 
                 <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:gap-8 lg:grid-cols-4">
@@ -182,12 +183,15 @@
             <div>
                 <div class="text-center py-6 border-y-[2.5px] border-dashed mb-5 lg:mb-10 lg:py-8">
                     <h2 class="text-[22px] font-extrabold lg:text-4xl text-[#131318]">Program Sections</h2>
-                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Dit amet consectetur. Condimentum dignissim adipiscing
-                        aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Hockey is one of the most popular sports in the world
+                        and
+                        betting is prohibited so we should not bet.and betting is prohibited so we should not bet.</p>
                 </div>
 
+                <!-- program image box -->
                 <div class="grid gap-6 lg:grid-cols-2 lg:grid-rows-2">
-                    
+
+                    <!-- box-1 -->
                     <div class="bg-custom h-[338px] rounded-2xl flex items-center lg:items-start ">
                         <div class="pt-10 md:pt-16 lg:pt-24 px-8">
                             <h2 class="text-2xl text-white font-extrabold">Junior Program</h2>
@@ -198,10 +202,10 @@
                         </div>
                     </div>
 
-
+                    <!-- box-2 -->
                     <div class="bg-custom-2 h-[338px] rounded-2xl flex items-center lg:items-start ">
                         <div class="pt-10 md:pt-16 lg:pt-24 px-8">
-                            <h2 class="text-2xl text-white font-extrabold">Junior Program</h2>
+                            <h2 class="text-2xl text-white font-extrabold">Teenager Program</h2>
                             <p class="text-white mt-3 mb-6">Hockey is one of the most popular sports in the world and
                                 betting is prohibited so we should not bet. Hockey is one of the most popular sports in
                                 the world and betting is prohibited so we should not bet.</p>
@@ -209,10 +213,12 @@
                         </div>
                     </div>
 
+                    <!-- box-3 -->
                     <div class="bg-custom-3 h-[338px] rounded-2xl lg:col-span-2 flex items-center lg:items-start">
                         <div class="pt-10 md:pt-16 lg:pt-24 px-8">
-                            <h2 class="text-2xl text-white font-extrabold">Junior Program</h2>
-                            <p class="text-white mt-3 mb-6 lg:w-1/2">Hockey is one of the most popular sports in the world and
+                            <h2 class="text-2xl text-white font-extrabold">Professional Program</h2>
+                            <p class="text-white mt-3 mb-6 lg:w-1/2">Hockey is one of the most popular sports in the
+                                world and
                                 betting is prohibited so we should not bet. Hockey is one of the most popular sports in
                                 the world and betting is prohibited so we should not bet.</p>
                             <a class="btn border-0 text-white bg-theme-color text-xs lg:text-base">Register Now!</a>
@@ -227,33 +233,107 @@
         <!-- end Program Sections here -->
 
 
+        <!-- start Our New Products here -->
+        <section class="mt-24">
+            <div>
+                <div class="text-center py-6 border-y-[2.5px] border-dashed mb-5 lg:mb-10 lg:py-8">
+                    <h2 class="text-[22px] font-extrabold lg:text-4xl text-[#131318]">Our New Products</h2>
+                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Hockey is one of the most popular sports in the world
+                        and
+                        betting is prohibited so we should not bet.and betting is prohibited so we should not bet.</p>
+                </div>
+
+                <!-- card-box -->
+                <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </section>
+        <!-- end Our New Products here -->
+
+
         <!-- start Clients Question codes here -->
-        <section class="hidden">
-            <div class="collapse collapse-plus bg-base-200">
-                <input type="radio" name="my-accordion-3" checked="checked" />
-                <div class="collapse-title text-xl font-medium">
-                    Click to open this one and close others
-                </div>
-                <div class="collapse-content">
-                    <p>hello</p>
-                </div>
-            </div>
-            <div class="collapse collapse-plus bg-base-200">
-                <input type="radio" name="my-accordion-3" />
-                <div class="collapse-title text-xl font-medium">
-                    Click to open this one and close others
-                </div>
-                <div class="collapse-content">
-                    <p>hello</p>
+        <section class="">
+            <!-- section header -->
+            <div>
+                <div class="text-center py-6 border-y-[2.5px] border-dashed mb-5 lg:mb-10 lg:py-8">
+                    <h2 class="text-[22px] font-extrabold lg:text-4xl text-[#131318]">Clients Question</h2>
+                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Hockey is one of the most popular sports in the
+                        world and
+                        betting is prohibited so we should not bet.and betting is prohibited so we should not bet.
+                    </p>
                 </div>
             </div>
-            <div class="collapse collapse-plus bg-base-200">
-                <input type="radio" name="my-accordion-3" />
-                <div class="collapse-title text-xl font-medium">
-                    Click to open this one and close others
+
+            <!-- content -->
+            <div class="flex gap-10 p-4 lg:p-8 shadow-lg rounded-2xl flex-col md:flex-col lg:flex-row">
+                <div class="flex justify-center">
+                    <img class="mx-auto" src="Images/11.png" alt="">
                 </div>
-                <div class="collapse-content">
-                    <p>hello</p>
+
+                <!-- accordion -->
+                <div class="w-full lg:h-full">
+                    <div class="join join-vertical w-full">
+                        <div class="collapse collapse-plus join-item border border-base-300">
+                            <input type="radio" name="my-accordion-4" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                Click to open this one and close others
+                            </div>
+                            <div class="collapse-content">
+                                <p>Hockey is one of the most popular sports in the world and betting is prohibited so we should not bet.</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus join-item border border-base-300">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Click to open this one and close others
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus join-item border border-base-300">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Click to open this one and close others
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus join-item border border-base-300">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Click to open this one and close others
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus join-item border border-base-300">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Click to open this one and close others
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus join-item border border-base-300">
+                            <input type="radio" name="my-accordion-4" />
+                            <div class="collapse-title text-xl font-medium">
+                                Click to open this one and close others
+                            </div>
+                            <div class="collapse-content">
+                                <p>hello</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
