added some changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body class="max-w-[1440px] mx-auto font-manrope">
 
-    <header class="w-11/12 lg:w-10/12 mx-auto mt-10 relative">
+    <header class="w-11/12 lg:w-10/12 mx-auto mt-5 relative">
         <!-- start nav codes here -->
         <nav class="">
             <div class="navbar m-0 p-0">
@@ -277,7 +277,7 @@
                 </div>
 
                 <!-- accordion -->
-                <div class="w-full lg:h-full">
+                <div class="w-full lg:w-2/3 lg:h-full">
                     <div class="join join-vertical w-full">
                         <div class="collapse collapse-plus join-item border border-base-300">
                             <input type="radio" name="my-accordion-4" checked="checked" />
