--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="custom.css">
 </head>
 
-<body class="max-w-[1440px] mx-auto font-manrope">
+<body class="max-w-[1440px] mx-auto font-manrope border">
 
     <header class="w-11/12 lg:w-10/12 mx-auto mt-5 relative">
         <!-- start nav codes here -->
@@ -345,35 +345,39 @@
 
 
     <!-- start footer here -->
-    <footer class="w-10/12 mx-auto footer p-10 bg-base-200 text-base-content hidden">
-        <aside>
-            <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
-                clip-rule="evenodd" class="fill-current">
-                <path
-                    d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
-                </path>
-            </svg>
-            <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
-        </aside>
-        <nav>
-            <header class="footer-title">Services</header>
-            <a class="link link-hover">Branding</a>
-            <a class="link link-hover">Design</a>
-            <a class="link link-hover">Marketing</a>
-            <a class="link link-hover">Advertisement</a>
-        </nav>
-        <nav>
-            <header class="footer-title">Company</header>
-            <a class="link link-hover">About us</a>
-            <a class="link link-hover">Contact</a>
-            <a class="link link-hover">Jobs</a>
-            <a class="link link-hover">Press kit</a>
-        </nav>
-        <nav>
-            <header class="footer-title">Legal</header>
-            <a class="link link-hover">Terms of use</a>
-            <a class="link link-hover">Privacy policy</a>
-            <a class="link link-hover">Cookie policy</a>
+    <footer class="w-full py-28 px-5 lg:px-[10%] bg-[#131318] flex flex-col gap-10 items-center lg:flex-row lg:justify-between">
+        <div class="text-center lg:text-start space-y-3">
+            <h2 class="text-2xl font-extrabold text-white">Get In Touch</h2>
+            <p class="text-[#ffffff99] w-[340px]">Hockey is one of the most popular sports in the world and betting is prohibited so we should not bet.</p>
+            <div><a href="#" class="text-[#ffffff99]"><i class="fa-regular fa-envelope mr-1 text-red-600"></i>  hockeys@support.com</a></div>
+            <div><a href="#" class="text-[#ffffff99]"><i class="fa-solid fa-phone mr-1 text-red-600"></i>  (+62) 123-321-543</a></div>
+        </div>
+
+        <div class="flex gap-[120px] lg:gap-[158px]">
+           <div class="text-center lg:text-start space-y-3">
+                <h2 class="text-xl font-bold text-white">Company</h2>
+                <div><a class="text-[#ffffff99]">About us</a></div>
+                <div><a class="text-[#ffffff99]">Leadership</a></div>
+                <div><a class="text-[#ffffff99]">Careers</a></div>
+                <div><a class="text-[#ffffff99]">News & Article</a></div>
+                <div><a class="text-[#ffffff99]">Legal Notice</a></div>
+            </div> 
+            <div class="text-center lg:text-start space-y-3">
+                <h2 class="text-xl font-bold text-white">Support</h2>
+                <div><a class="text-[#ffffff99]">Help Center</a></div>
+                <div><a class="text-[#ffffff99]">FAQ</a></div>
+                <div><a class="text-[#ffffff99]">Ticket Support</a></div>
+                <div><a class="text-[#ffffff99]">Contact Us</a></div>
+            </div>
+        </div>
+
+        <nav class="text-center lg:text-start space-y-3">
+            <h2 class="text-xl font-bold text-white">Services</h2>
+            <div><a class="text-[#ffffff99]">Academy</a></div>
+            <div><a class="text-[#ffffff99]">Group Lesson</a></div>
+            <div><a class="text-[#ffffff99]">Private Lesson</a></div>
+            <div><a class="text-[#ffffff99]">Hockeys for kids</a></div>
+            <div><a class="text-[#ffffff99]">Hockeys for Adult</a></div>
         </nav>
     </footer>
     <!-- end footer here -->
