added get in touch and footer with responsive

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 
         <!-- start Our New Products here -->
-        <section class="mt-24">
+        <section class="mt-12 md:mt-16 lg:mt-24">
             <div>
                 <div class="text-center py-6 border-y-[2.5px] border-dashed mb-5 lg:mb-10 lg:py-8">
                     <h2 class="text-[22px] font-extrabold lg:text-4xl text-[#131318]">Our New Products</h2>
@@ -281,63 +281,151 @@
                     <div class="join join-vertical w-full">
                         <div class="collapse collapse-plus join-item border border-base-300">
                             <input type="radio" name="my-accordion-4" checked="checked" />
-                            <div class="collapse-title text-xl font-medium">
-                                Click to open this one and close others
+                            <div class="collapse-title text-xl font-bold ">
+                                Our Equipment
                             </div>
                             <div class="collapse-content">
-                                <p>Hockey is one of the most popular sports in the world and betting is prohibited so we should not bet.</p>
+                                <p>Hockey is one of the most popular sports in the world and betting is prohibited so we
+                                    should not bet.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-plus join-item border border-base-300">
                             <input type="radio" name="my-accordion-4" />
-                            <div class="collapse-title text-xl font-medium">
-                                Click to open this one and close others
+                            <div class="collapse-title text-xl font-bold">
+                                Hockey Training
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>Hockey is one of the most popular sports in the world and betting is prohibited so we
+                                    should not bet.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-plus join-item border border-base-300">
                             <input type="radio" name="my-accordion-4" />
-                            <div class="collapse-title text-xl font-medium">
-                                Click to open this one and close others
+                            <div class="collapse-title text-xl font-bold">
+                                Ski Touring
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>Hockey is one of the most popular sports in the world and betting is prohibited so we
+                                    should not bet.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-plus join-item border border-base-300">
                             <input type="radio" name="my-accordion-4" />
-                            <div class="collapse-title text-xl font-medium">
-                                Click to open this one and close others
+                            <div class="collapse-title text-xl font-bold">
+                                Booking
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>Hockey is one of the most popular sports in the world and betting is prohibited so we
+                                    should not bet.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-plus join-item border border-base-300">
                             <input type="radio" name="my-accordion-4" />
-                            <div class="collapse-title text-xl font-medium">
-                                Click to open this one and close others
+                            <div class="collapse-title text-xl font-bold">
+                                Pricings
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>Hockey is one of the most popular sports in the world and betting is prohibited so we
+                                    should not bet.</p>
                             </div>
                         </div>
                         <div class="collapse collapse-plus join-item border border-base-300">
                             <input type="radio" name="my-accordion-4" />
-                            <div class="collapse-title text-xl font-medium">
-                                Click to open this one and close others
+                            <div class="collapse-title text-xl font-bold">
+                                Private Lessons
                             </div>
                             <div class="collapse-content">
-                                <p>hello</p>
+                                <p>Hockey is one of the most popular sports in the world and betting is prohibited so we
+                                    should not bet.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- start Clients Question codes here -->
+        <!-- end Clients Question codes here -->
+
+        <!-- start Get In Touch here -->
+        <section class="mt-12 md:mt-16 lg:mt-24">
+            <!-- section header -->
+            <div>
+                <div class="text-center py-6 border-y-[2.5px] border-dashed mb-5 lg:mb-10 lg:py-8">
+                    <h2 class="text-[22px] font-extrabold lg:text-4xl text-[#131318]">Get In Touch</h2>
+                    <p class="px-0 mt-3 lg:mt-6 lg:px-[220px] ">Hockey is one of the most popular sports in the
+                        world and
+                        betting is prohibited so we should not bet.and betting is prohibited so we should not bet.
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex flex-col md:flex-row lg:flex-row gap-6">
+                <div class="border border-[#1313181A] p-6 md:p-12 lg:p-12 rounded-2xl w-full lg:w-[60%]">
+                    <div class="p-9 bg-[#BCED6D1A] rounded-2xl">
+                        <img src="Images/group.png" alt="">
+                        <p class="mt-6 text-[#13131866]">Phone Number :</p>
+                        <h2 class="text-[18px] font-extrabold">(+62) 123-321-543</h2>
+                    </div>
+
+                    <div class="p-9 bg-[#FDDD5F1A] rounded-2xl my-6">
+                        <img src="Images/Group-3.png" alt="">
+                        <p class="mt-6 text-[#13131866]">Email :</p>
+                        <h2 class="text-lg font-extrabold">hockeys@support .com</h2>
+                    </div>
+
+                    <div class="p-9 bg-[#BCED6D1A] rounded-2xl">
+                        <img src="Images/Group-2.png" alt="">
+                        <p class="mt-6 text-[#13131866]">Location :</p>
+                        <h2 class="text-[18px] font-extrabold">152/1 Mohakhali Wireless Gate</h2>
+                    </div>
+
+                </div>
+
+                <div class="w-full grid grid-cols-1 lg:grid-cols-2 gap-6">
+                    <div class="">
+                        <h2 class="text-[18px] font-extrabold">Your Name</h2>
+                        <input class="w-full bg-[#13131808] p-5 rounded-xl" type="text" name="" id=""
+                            placeholder="Enter your full name">
+                    </div>
+                    <div>
+                        <h2 class="text-[18px] font-extrabold">Your Email</h2>
+                        <input class="w-full bg-[#13131808] p-5 rounded-xl" type="text" name="" id=""
+                            placeholder="Enter your email">
+                    </div>
+                    <div>
+                        <h2 class="text-[18px] font-extrabold">Subject</h2>
+                        <input class="w-full bg-[#13131808] p-5 rounded-xl" type="text" name="" id=""
+                            placeholder="Enter your subject">
+                    </div>
+                    <div>
+                        <h2 class="text-[18px] font-extrabold">Phone Number</h2>
+                        <input class="w-full bg-[#13131808] p-5 rounded-xl" type="text" name="" id=""
+                            placeholder="Enter your phone number">
+                    </div>
+                    <div class=" lg:col-span-2">
+                        <h2 class="text-[18px] font-extrabold">Message</h2>
+                        <textarea class="w-full bg-[#13131808] p-5 rounded-xl" name="" id="" cols="30"
+                            rows="14">Write your message</textarea>
+                    </div>
+                    <div class="lg:col-span-2">
+                        <button class="btn text-white bg-theme-color border-0 w-full">Send Message</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end Get In Touch here -->
+
+        <!-- start Social Media -->
+        <div class="mt-12 text-center bg-[#13131808] py-8 rounded-xl">
+            <h2 class="text-2xl font-extrabold mb-6">Social Media</h2>
+            <div class="text-2xl tracking-[15px]">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+            </div>
+        </div>
+
+
     </main>
 
 
@@ -345,23 +433,27 @@
 
 
     <!-- start footer here -->
-    <footer class="w-full py-28 px-5 lg:px-[10%] bg-[#131318] flex flex-col gap-10 items-center lg:flex-row lg:justify-between">
+    <footer
+        class=" mt-12 lg:mt-24 w-full py-28 px-5 lg:px-[10%] bg-[#131318] flex flex-col gap-10 items-center lg:flex-row lg:justify-between">
         <div class="text-center lg:text-start space-y-3">
             <h2 class="text-2xl font-extrabold text-white">Get In Touch</h2>
-            <p class="text-[#ffffff99] w-[340px]">Hockey is one of the most popular sports in the world and betting is prohibited so we should not bet.</p>
-            <div><a href="#" class="text-[#ffffff99]"><i class="fa-regular fa-envelope mr-1 text-red-600"></i>  hockeys@support.com</a></div>
-            <div><a href="#" class="text-[#ffffff99]"><i class="fa-solid fa-phone mr-1 text-red-600"></i>  (+62) 123-321-543</a></div>
+            <p class="text-[#ffffff99] w-[340px]">Hockey is one of the most popular sports in the world and betting is
+                prohibited so we should not bet.</p>
+            <div><a href="#" class="text-[#ffffff99]"><i class="fa-regular fa-envelope mr-1 text-red-600"></i>
+                    hockeys@support.com</a></div>
+            <div><a href="#" class="text-[#ffffff99]"><i class="fa-solid fa-phone mr-1 text-red-600"></i> (+62)
+                    123-321-543</a></div>
         </div>
 
         <div class="flex gap-[120px] lg:gap-[158px]">
-           <div class="text-center lg:text-start space-y-3">
+            <div class="text-center lg:text-start space-y-3">
                 <h2 class="text-xl font-bold text-white">Company</h2>
                 <div><a class="text-[#ffffff99]">About us</a></div>
                 <div><a class="text-[#ffffff99]">Leadership</a></div>
                 <div><a class="text-[#ffffff99]">Careers</a></div>
                 <div><a class="text-[#ffffff99]">News & Article</a></div>
                 <div><a class="text-[#ffffff99]">Legal Notice</a></div>
-            </div> 
+            </div>
             <div class="text-center lg:text-start space-y-3">
                 <h2 class="text-xl font-bold text-white">Support</h2>
                 <div><a class="text-[#ffffff99]">Help Center</a></div>
