--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="custom.css">
 </head>
 
-<body class="max-w-[1440px] mx-auto font-manrope border">
+<body class="max-w-[1440px] mx-auto font-manrope">
 
     <header class="w-11/12 lg:w-10/12 mx-auto mt-5 relative">
         <!-- start nav codes here -->
